# aoc

./: Makefile  README.md  advent-of-code.code-workspace  common.hpp  template.cpp
2019/: 1.cpp  10.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
2020/: 1.1.cpp  1.2.cpp  1.cpp  10.cpp  10.txt  2.cpp  3.cpp  4.1.txt  4.2.txt  4.cpp  5.cpp  6.cpp  6.txt  7.cpp  8.cpp  9.cpp  advent-of-code.code-workspace
2021/: Cargo.toml  README.md
2021/data/: 7_test.txt
2021/src/: 1.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs  template.rs
2022/: Cargo.toml  README.md
2022/src/: template.rs
