[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1"
path = "src/1.rs"

[[bin]]
name = "2"
path = "src/2.rs"

[[bin]]
name = "3"
path = "src/3.rs"

[[bin]]
name = "4"
path = "src/4.rs"

[[bin]]
name = "5"
path = "src/5.rs"

[[bin]]
name = "template"
path = "src/template.rs"
test = false

[dependencies]
text_io = "0.1.9"
